--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="button_send">Send</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="editor_name">Editor</string>
 </resources>
