--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="editor_name">Editor</string>
+      <string name="mainMenu_name">Main Menu</string>
 </resources>
