--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,11 +2,13 @@
 <resources>
 
     <string name="app_name">Music Notes</string>
-   <string name="edit_message">Enter a message</string>
+    <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="editor_name">Editor</string>
-      <string name="mainMenu_name">Main Menu</string>
-      <string name="timesigtop_file_path">@drawable/four</string>
+    <string name="mainMenu_name">Main Menu</string>
+    <string name="timesigtop_file_path">@drawable/four</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
