Connor: Small changes to EditorActivity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="editor_name">Editor</string>
       <string name="mainMenu_name">Main Menu</string>
       <string name="timesigtop_file_path">@drawable/four</string>
+      
+      <string-array name="toolbarSpinnerArray">
+          <item>Notes</item>
+          <item>Rests</item>
+          <item>Accidentals</item>
+      </string-array>
 </resources>
