--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="button_send">Send</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="editor_name">Editor</string>
+    <string name="editor_name">New Sheet</string>
 
       <string name="mainMenu_name">Main Menu</string>
       <string name="timesigtop_file_path">@drawable/four</string>
