--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,7 @@
           <item>Notes</item>
           <item>Rests</item>
           <item>Accidentals</item>
+          <item>Play Back</item>
       </string-array>
       
       <string-array name = "currentMeasureArray">
