File Manage Working

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,8 +21,13 @@
       
       <string-array name = "currentMeasureArray">
           
+      </string-array>
+      
+      <string-array name = "listofSheetsArray">
           
       </string-array>
+          
+      
 	<string name="save">Save</string>
     <string name="hello_world">Hello world!</string>
     <string name="new_sheet">New Sheet</string>
