Added multiple staves and changing clef

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,7 +22,9 @@
       <string-array name = "currentMeasureArray">
           
       </string-array>
-      
+      <string-array name = "currentStaffArray">
+          
+      </string-array>
       <string-array name = "listofSheetsArray">
           
       </string-array>
